objects/EUR_CRM_Mechanic__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Enable_Contract_Volume_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Contract Volume Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Grouping_Name__c</fullName>
        <formula>EUR_CRM_Mechanic_Type__r.EUR_CRM_Grouping_Name__c</formula>
        <label>Grouping Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Headquarters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Headquarters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mechanic Type</label>
        <referenceTo>EUR_CRM_Mechanic_Type__c</referenceTo>
        <relationshipName>Mechanics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_App_Display_Order__c</fullName>
        <description>Numbering to instruct Mobile App which order to display Contract Audit Activity sections</description>
        <label>Mobile App Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Profit_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profit Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit_Volume__c</fullName>
        <label>Unit Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mechanic (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DK_Mechanics</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Type__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>EUR_CRM_Mobile_App_Display_Order__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Unit_Volume__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic__c.EUR_DK_Mechanic</value>
        </filters>
        <label>All DK Mechanics</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_EUR_DE_Mechanics</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Type__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic__c.EUR_DE_Mechanic</value>
        </filters>
        <label>All EUR DE Mechanics</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_EUR_GB_Mechanics</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Type__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic__c.EUR_GB_Mechanic</value>
        </filters>
        <label>All EUR GB Mechanics</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Mechanics</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Mechanic_Type__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>EUR_CRM_Mobile_App_Display_Order__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Unit_Volume__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic__c.EUR_FI_Mechanic</value>
        </filters>
        <label>All FI Mechanics</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_Mechanic_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Mechanic_Type__c</columns>
        <columns>EUR_CRM_Mobile_App_Display_Order__c</columns>
        <columns>EUR_CRM_Profit_Calculation__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic__c.EUR_PT_Mechanic</value>
        </filters>
        <label>EUR PT All Mechanic View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Mechanic</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Enable_Contract_Volume_Tracking__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Grouping_Name__c</columns>
        <columns>EUR_CRM_Is_Headquarters__c</columns>
        <columns>EUR_CRM_Mechanic_Type__c</columns>
        <columns>EUR_CRM_Mobile_App_Display_Order__c</columns>
        <columns>EUR_CRM_Profit_Calculation__c</columns>
        <columns>EUR_CRM_Rate__c</columns>
        <columns>EUR_CRM_Unit_Volume__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Mechanic__c.EUR_ZA_Mechanic</value>
        </filters>
        <label>All ZA Mechanic</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Mechanic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mechanic (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Mechanic</fullName>
        <active>true</active>
        <description>For Germany</description>
        <label>EUR_DE_Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Mechanic</fullName>
        <active>true</active>
        <label>EUR DK Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Mechanic</fullName>
        <active>true</active>
        <label>EUR FI Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Mechanic</fullName>
        <active>true</active>
        <label>GB Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Mechanic</fullName>
        <active>true</active>
        <label>EUR PT Mechanic</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Mechanic</fullName>
        <active>true</active>
        <label>EUR ZA Mechanic</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>